--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,27 @@
-build
-npm-debug.log
-coverage
-test-report.xml
-.vscode/settings.json
-**/node_modules
-*.env
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 
 
 ## Ignore Visual Studio temporary files, build results, and
